tests/unit_tests/sema/binder_typealias_symbol_conflict_01.cc
// RUN: %cxx -verify %s

int Value;
typedef int Value;  // expected-error {{conflicting declaration of 'Value'}}
